# ChangeLog for net-misc/asterisk-sounds
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/ChangeLog,v 1.9 2006/02/28 02:45:33 stkn Exp $

*asterisk-sounds-1.2.1 (28 Feb 2006)

  28 Feb 2006; Stefan Knoblich <stkn@gentoo.org>
  -files/asterisk-sounds-1.2.0_beta1-description.diff,
  -asterisk-sounds-1.2.0_beta1.ebuild, +asterisk-sounds-1.2.1.ebuild:
  Version bump and remove 1.2.0_beta version.

  28 Feb 2006; Stefan Knoblich <stkn@gentoo.org>
  -asterisk-sounds-1.0.6.ebuild:
  Removed old 1.0.x version.

  15 Sep 2005; Stefan Knoblich <stkn@gentoo.org>
  asterisk-sounds-1.0.8.ebuild:
  Stable on x86.

  15 Sep 2005; Stefan Knoblich <stkn@gentoo.org>
  asterisk-sounds-1.0.6.ebuild, asterisk-sounds-1.0.7.ebuild,
  asterisk-sounds-1.0.8.ebuild:
  Fixed SRC_URI.

*asterisk-sounds-1.2.0_beta1 (09 Sep 2005)

  09 Sep 2005; Stefan Knoblich <stkn@gentoo.org>
  +files/asterisk-sounds-1.2.0_beta1-description.diff,
  +asterisk-sounds-1.2.0_beta1.ebuild:
  Version bump.

*asterisk-sounds-1.0.8 (25 Jun 2005)

  25 Jun 2005; Stefan Knoblich <stkn@gentoo.org>
  +asterisk-sounds-1.0.8.ebuild, asterisk-sounds-1.0.6.ebuild,
  asterisk-sounds-1.0.7.ebuild:
  Version bump. Added non-root permission fixes.

  10 May 2005; David Holm <dholm@gentoo.org> asterisk-sounds-1.0.7.ebuild:
  Added to ~ppc.

*asterisk-sounds-1.0.7 (21 Mar 2005)

  21 Mar 2005; Stefan Knoblich <stkn@gentoo.org>
  +asterisk-sounds-1.0.7.ebuild:
  Version bump.

*asterisk-sounds-1.0.6 (10 Mar 2005)

  10 Mar 2005; Stefan Knoblich <stkn@gentoo.org>
  +asterisk-sounds-1.0.6.ebuild:
  Initial import. This has been splitted from the asterisk ebuild.
