@@ -1,8 +1,42 @@
-MD5 dbbe9a94d22dc5dd41e4951fd38bb514 ChangeLog 1704
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+DIST asterisk-sounds-1.0.7.tar.gz 3170492
+DIST asterisk-sounds-1.0.8.tar.gz 3170394
+DIST asterisk-sounds-1.2.1.tar.gz 3249876
+EBUILD asterisk-sounds-1.0.7.ebuild 788 RMD160 1dcef9e9250896ddda969eb906d54b818783ec4a SHA1 acbced3961d739846d0847a647b40056162bfb65 SHA256 175627185dad349590162e83faa93e34c4193f31d27cc5a2438322ac987b14a7
 MD5 fdb31630ec361c9078cff81c9d9f81ae asterisk-sounds-1.0.7.ebuild 788
-MD5 f82a8bd1aa130d76aad035e3fe971abe asterisk-sounds-1.0.8.ebuild 787
+RMD160 1dcef9e9250896ddda969eb906d54b818783ec4a asterisk-sounds-1.0.7.ebuild 788
+SHA256 175627185dad349590162e83faa93e34c4193f31d27cc5a2438322ac987b14a7 asterisk-sounds-1.0.7.ebuild 788
+EBUILD asterisk-sounds-1.0.8.ebuild 790 RMD160 9d854481cb5dd668f17b7d91256095a759eeaabe SHA1 4f500bb0ce4b2f1d53090e88644111331b95c405 SHA256 369e18ff26c015f50b9c7ddee8a313720d0c03929945a1cc547945b4a7983035
+MD5 72eb55e4c2e0f9d43c2e85898083c1ba asterisk-sounds-1.0.8.ebuild 790
+RMD160 9d854481cb5dd668f17b7d91256095a759eeaabe asterisk-sounds-1.0.8.ebuild 790
+SHA256 369e18ff26c015f50b9c7ddee8a313720d0c03929945a1cc547945b4a7983035 asterisk-sounds-1.0.8.ebuild 790
+EBUILD asterisk-sounds-1.2.1.ebuild 832 RMD160 1af4d012d7dbbd5deef80dbaa6ded6aa186f6620 SHA1 aecb2b459351fcd513dfbba48176179acf31176e SHA256 cc8df8f06cea75651ca3b725f93695728e0547083735c7ca06e0a1916b7d0ff9
 MD5 0ce34ac383eed6711f0ef6278cc09d71 asterisk-sounds-1.2.1.ebuild 832
-MD5 52b41306e47aa47d6c7825684c715017 files/digest-asterisk-sounds-1.0.7 74
-MD5 0e381530d5433423afd7cea188ce8043 files/digest-asterisk-sounds-1.0.8 74
-MD5 bb9b5f17dd84688ed01e7a48a7c8bd11 files/digest-asterisk-sounds-1.2.1 74
+RMD160 1af4d012d7dbbd5deef80dbaa6ded6aa186f6620 asterisk-sounds-1.2.1.ebuild 832
+SHA256 cc8df8f06cea75651ca3b725f93695728e0547083735c7ca06e0a1916b7d0ff9 asterisk-sounds-1.2.1.ebuild 832
+MISC ChangeLog 1814 RMD160 fe598a56252f41496d8affb05098c9b8ade899bc SHA1 0919bf4e69913db0010db1c85626b9db6c1113c8 SHA256 f5fd1b3a94db043a243d21425d7ab9fd66d83568e79e5d8dcc99062cb44722db
+MD5 fc627b989ea7d4f8c9839569bdaaee66 ChangeLog 1814
+RMD160 fe598a56252f41496d8affb05098c9b8ade899bc ChangeLog 1814
+SHA256 f5fd1b3a94db043a243d21425d7ab9fd66d83568e79e5d8dcc99062cb44722db ChangeLog 1814
+MISC metadata.xml 248 RMD160 a989fff0cebc82a58a75fb3a2eec8da0712ad57e SHA1 10bea6cd152e9f0ecb627eaacc19980a9d5f5dc4 SHA256 d0e3ab77a8a7b859511b8d5fda83dc018351e6367724b097dcc13c4aa0a3ee6b
 MD5 44cf247f04cc83413fcb40ed59d0847a metadata.xml 248
+RMD160 a989fff0cebc82a58a75fb3a2eec8da0712ad57e metadata.xml 248
+SHA256 d0e3ab77a8a7b859511b8d5fda83dc018351e6367724b097dcc13c4aa0a3ee6b metadata.xml 248
+MD5 52b41306e47aa47d6c7825684c715017 files/digest-asterisk-sounds-1.0.7 74
+RMD160 fd515be1aeb5f24f2b85ca677e818a8218bf1cb4 files/digest-asterisk-sounds-1.0.7 74
+SHA256 fcdd6d794c0d190da161c2d731380b79314857c45dbe5416ab21795411c6cc8a files/digest-asterisk-sounds-1.0.7 74
+MD5 0e381530d5433423afd7cea188ce8043 files/digest-asterisk-sounds-1.0.8 74
+RMD160 0cf6675b710364f4c5da95986a338333283fe06c files/digest-asterisk-sounds-1.0.8 74
+SHA256 0b766816fd5382449c415dcde633ddd6b1031cdcdc0dd18fde55fb5b10d9827d files/digest-asterisk-sounds-1.0.8 74
+MD5 bb9b5f17dd84688ed01e7a48a7c8bd11 files/digest-asterisk-sounds-1.2.1 74
+RMD160 7477c40a8ad94265c86a00b904384dde8bf3e4ff files/digest-asterisk-sounds-1.2.1 74
+SHA256 4e580130b3d405d0002c869cea0768598ce6110f59c3d8a267e7efc06c98f604 files/digest-asterisk-sounds-1.2.1 74
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5-ecc0.1.6 (GNU/Linux)
+
+iD8DBQFE0R/bKRy60XGEcJIRAkzdAJ4+Ryu98NIr4K7z7fMepPfbbdumVQCgoO0X
+RiDPGZz5XWjzDUCD6Jzmjts=
+=e4+q
+-----END PGP SIGNATURE-----
