@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/asterisk-sounds-1.0.8.ebuild,v 1.4 2005/09/15 02:43:46 stkn Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/asterisk-sounds-1.0.8.ebuild,v 1.5 2006/08/02 21:57:32 gustavoz Exp $
 
 IUSE=""
 
@@ -10,7 +10,7 @@ SRC_URI="ftp://ftp.digium.com/pub/telephony/asterisk/old-releases/${P}.tar.gz"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="x86 ~sparc ~hppa ~amd64 ~ppc"
+KEYWORDS="x86 sparc ~hppa ~amd64 ~ppc"
 
 DEPEND="net-misc/asterisk"
 
