@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/asterisk-sounds
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/ChangeLog,v 1.9 2006/02/28 02:45:33 stkn Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/ChangeLog,v 1.10 2006/08/02 21:57:32 gustavoz Exp $
+
+  02 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  asterisk-sounds-1.0.8.ebuild:
+  Stable on sparc
 
 *asterisk-sounds-1.2.1 (28 Feb 2006)
 
